<resources>
    <string name="app_name">Autoshare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stylised_app_name">stylised app name</string>
    <string name="location">Location</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="period">Select dates</string>
    <string name="illustration_of_people_driving">Illustration of people driving</string>
    <string name="rent_the_perfect_car">Rent the perfect car</string>
    <string name="confirm">Confirm</string>
    <string name="name">Your name</string>
    <string name="surname">Your surname</string>
    <string name="prompt_email">Your email</string>
    <string name="prompt_password">Your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="card_number">Card number</string>
    <string name="due_mm_yy">Due (MM/YY)</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="add_card">Add credit card</string>
    <string name="my_cards">My cards</string>
    <string name="card_info">Credit card information</string>
    <string name="delete_card">Delete card</string>
    <string name="card_deleted">Card deleted</string>
    <string name="add_credit_card">Add new credit card</string>
    <string name="are_you_sure">Are you sure you want to delete card </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="available_cars">Available cars</string>
    <string name="filters">Filters</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="country">Country</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="billing_address">Billing address</string>
    <string name="required_field">Required field</string>
    <string name="illustration_of_a_lightbulb">Illustration of a lightbulb</string>
    <string name="get_relevant_information">Get relevant information</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="roads_amp_traffic_info"><![CDATA[Roads & traffic info]]></string>
    <string name="title_activity_fuel_prices">FuelPricesActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="personal_information">Personal information</string>
    <string name="card_information">Card information</string>
    <string name="about_app">About App</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="register">Register</string>
    <string name="welcome_to_autoshare">Welcome to Autoshare</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register_now">Register now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="become_a_part_of_the_autoshare_community">Become a part of the Autoshare community</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="fuel_prices">Fuel prices</string>
    <string name="roads_traffic_info"><![CDATA[Roads & traffic info]]></string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="_7_day_forecast">7-day forecast</string>
    <string name="weather_conditions_illustration">Weather conditions illustration</string>
    <string name="get_weather">Get weather</string>
    <string name="back_arrow">Back arrow</string>
    <string name="sun_icon">Sun icon</string>
    <string name="moon_icon">Moon icon</string>
    <string name="wind_icon">Wind icon</string>
    <string name="pressure_icon">Pressure icon</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="my_vehicles">My vehicles</string>
    <string name="add_new_vehicle">Add new vehicle</string>
    <string name="per_day">&#160;/ day</string>
    <string name="continue_to_autoshare"><u>Continue to Autoshare</u></string>
    <string name="error_adding_vehicle_please_try_again">Error adding vehicle,\nplease try again</string>
    <string name="vehicle_added_successfully">Vehicle added successfully</string>
    <string name="add_vehicle_details">Add vehicle details</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="manufacturer_lowercase">manufacturer</string>
    <string name="enter_your_vehicle_s">Enter your vehicle\'s</string>
    <string name="model_lowercase">model</string>
    <string name="model">Model</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="tell_us_a_bit_about_your_vehicle_s_specifications">Tell us a bit about your vehicle\'s specifications.</string>
    <string name="if_you_re_not_sure">If you\'re not sure, you can always leave some fields empty.</string>
    <string name="type">Type</string>
    <string name="transmission">Transmission</string>
    <string name="fuel_type">Fuel type</string>
    <string name="drivetrain">Drivetrain</string>
    <string name="colour">Colour</string>
    <string name="tyres">Tyres</string>
    <string name="parking_sensors">Parking sensors</string>
    <string name="add_a_few_of_your_vehicle_s_metrics">Add a few of your vehicle\'s metrics.</string>
    <string name="horsepower">Horsepower:</string>
    <string name="average_consumption">Average consumption:</string>
    <string name="fuel_litres_per_100_km">fuel litres per 100 km</string>
    <string name="fuel_capacity">Fuel capacity:</string>
    <string name="in_litres">in litres</string>
    <string name="finally_select">Finally, select all the features your vehicle has.</string>
    <string name="a_c">A/C</string>
    <string name="aux">AUX</string>
</resources>