<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.info.InfoFragment">

    <TextView
        android:id="@+id/tv_heading"
        style="@style/HeadingsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="30dp"
        android:text="@string/get_relevant_information" />


    <Button
        android:id="@+id/btn_weather"
        style="@style/NavigationButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_heading"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/weather_forecast" />

    <Button
        android:id="@+id/btn_fuel"
        style="@style/NavigationButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_weather"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/fuel_prices" />

    <Button
        android:id="@+id/btn_traffic"
        style="@style/NavigationButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_fuel"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/roads_traffic_info" />

    <!--ImageView
        android:id="@+id/iv_bulb"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/illustration_of_a_lightbulb"
        android:src="@drawable/ic_light_bulb" /-->

</RelativeLayout>