<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    tools:context=".ui.home.search.SearchFragment">

    <TextView
        android:id="@+id/tv_heading"
        style="@style/HeadingsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="30dp"
        android:text="Manage your profile" />

    <Button
        android:id="@+id/btn_pers_info"
        style="@style/NavigationButtonsStyle"
        android:layout_width="match_parent"
        android:layout_below="@id/tv_heading"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/personal_information" />

    <Button
        android:id="@+id/btn_card_info"
        style="@style/NavigationButtonsStyle"
        android:layout_width="match_parent"
        android:layout_below="@id/btn_pers_info"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/card_information" />

    <Button
        android:id="@+id/btn_my_vehicles"
        style="@style/NavigationButtonsStyle"
        android:layout_width="match_parent"
        android:layout_below="@id/btn_card_info"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="start|center_vertical"
        android:text="@string/my_vehicles" />

    <TextView
        android:id="@+id/tv_about"
        style="@android:style/Widget.Material.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="20dp"
        android:text="@string/about_app"
        android:textAlignment="center"
        android:textColor="@color/basic_red"
        android:textSize="15sp" />


</RelativeLayout>