<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/app_white"
    tools:context=".ui.user.UserCardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.braintreepayments.cardform.view.CardForm
                android:id="@+id/card_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="30dp"
                android:hapticFeedbackEnabled="true" />

            <TextView
                android:id="@+id/tv_billing_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_form"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/billing_address"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_billing_address"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/first_name"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/user_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/last_name"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_surname"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/user_city"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_address"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/city"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/user_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_address"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/user_city"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/area"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/user_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_city"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/country"
                android:inputType="text"
                android:singleLine="true" />

            <com.braintreepayments.cardform.view.CardForm
                android:id="@+id/card_form_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_country"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="30dp"
                android:hapticFeedbackEnabled="true" />


        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/addCardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/basic_red"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />

</RelativeLayout>