<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_red"
    tools:context=".ui.auth.RegistrationFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background" />


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/registerFragmentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:text="@string/let_s_get_started"
            android:textColor="@color/app_white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragmentText"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/become_a_part_of_the_autoshare_community"
            android:textColor="@color/darker_app_white"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/container_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_subheading"
            android:layout_marginVertical="7.5dp">

            <EditText
                android:id="@+id/registerFragmentName"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:autofillHints="personGivenName"
                android:background="@drawable/rounded_corners_box_outline_white"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:paddingEnd="14dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/rounded_corners_box_red" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="18dp"
                android:src="@drawable/ic_baseline_person_24" />
        </RelativeLayout>

        <EditText
            android:id="@+id/registerFragmentSurname"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_name"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="7.5dp"
            android:autofillHints="personFamilyName"
            android:background="@drawable/rounded_corners_box_outline_white"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingEnd="14dp" />

        <RelativeLayout
            android:id="@+id/container_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragmentSurname"
            android:layout_marginVertical="7.5dp">

            <EditText
                android:id="@+id/registerFragmentEmail"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:autofillHints="username"
                android:background="@drawable/rounded_corners_box_outline_white"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="30dp"
                android:paddingEnd="14dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/rounded_corners_box_red" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="18dp"
                android:src="@drawable/ic_baseline_mail_outline_24" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_email"
            android:layout_marginVertical="7.5dp">

            <EditText
                android:id="@+id/registerFragmentPassword"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:autofillHints="newPassword"
                android:background="@drawable/rounded_corners_box_outline_white"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingStart="30dp"
                android:paddingEnd="14dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/rounded_corners_box_red" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="18dp"
                android:src="@drawable/ic_baseline_vpn_key_24" />
        </RelativeLayout>

        <EditText
            android:id="@+id/registerFragmentPasswordConfirm"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_password"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="newPassword"
            android:background="@drawable/rounded_corners_box_outline_white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="14dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerFragmentButton"
            style="@style/ActionButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_below="@id/registerFragmentPasswordConfirm"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/app_white"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="@color/basic_red"
            android:textSize="16sp"
            app:cornerRadius="12sp" />


    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_to_login"
        android:layout_centerHorizontal="true"
        android:text="@string/already_have_an_account"
        android:textColor="@color/darker_app_white" />

    <TextView
        android:id="@+id/tv_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="@color/app_white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>