<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    tools:context=".view.SearchFragment">

    <ImageView
        android:id="@+id/iv_car"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:padding="40dp"
        android:src="@drawable/ic_car_driving"
        android:contentDescription="@string/illustration_of_people_driving" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_car"
        android:layout_centerInParent="true"
        android:layout_marginTop="-45dp">

        <ImageView
            android:id="@+id/iv_box"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/rounded_corners_box_white" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            android:text="@string/location"
            android:textColor="@color/light_grey"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_baseline_add_location_alt_24"
            app:drawableTint="@color/dark_grey" />

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_location"
            android:layout_centerInParent="true"
            android:layout_marginVertical="4dp"
            android:src="@drawable/line_horizontal" />

        <TextView
            android:id="@+id/tv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_line"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            android:text="@string/period"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
            app:drawableTint="@color/dark_grey" />

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/iv_box"
            android:background="@drawable/bottom_corners_rounded_white"
            android:drawableTint="@color/dark_red"
            android:text="@string/search"
            android:textSize="18sp" />
    </RelativeLayout>


</RelativeLayout>